# AgentMap

./: .claude-agents.json  .editorconfig  .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  .sharkconfig.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  PROJECT_RULES.md  README.md  README_cloud_storage.md  README_for_contributors.md  agent_contract.md  agentmap-workflow.jsx  agentmap_api_service_spec.md  agentmap_config.yaml  agentmap_config_storage.yaml  async_fastapi_routes.py  claude.md  claude_documentation.md  continue_prompt.md  index.html  mypy.ini  pre-checkin.bat  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  ruff.toml  shark-tasks.db  shark-tasks_20260124_231913_backup.db  storage_config.yaml  usage_details.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  import_blocker.txt  old_run_tests.yml  publish_to_pypi.yml  static.yml
.swarm/: memory.json
agentmap/: __init__.py  cli.py  compiler.py  config.py  fastapi_server.py  handler.py  runner.py  server.py
agentmap/agents/: __init__.py  base_agent.py  features.py  loader.py
agentmap/config/: __init__.py  defaults.py
agentmap/exceptions/: __init__.py  agent_exceptions.py  graph_exceptions.py
agentmap/functions/: select_node.py
agentmap/graph/: assembler.py  builder.py  csv_loader.py  node_registry.py  scaffold.py  tracked_node.py
agentmap/logging/: __init__.py  logger.py  tracing.py
agentmap/prompts/: __init__.py  manager.py
agentmap/state/: adapter.py  manager.py
agentmap/templates/: agent_template.py.txt  function_template.py.txt
agentmap/utils/: common.py  langchain_compat.py
dashboards/grafana/: README.md  agentmap-llm-operations.json  agentmap-workflow-explorer.json
deployment_scripts/: aws-terraform-deployment.txt  deployment-script.ps1
deployment_scripts/aws/: DEPLOYMENT_FIXED.md  README.md  deploy.bat  (+5 more)
docs/: README.md  README_orchestrator.md  README_usage_details.md  index.html
docs-docusaurus/: ALGOLIA_APPLICATION_GUIDE.md  LINK_MAPPING_REFERENCE.md  README.md  SEO_IMPLEMENTATION_GUIDE.md  VERSIONING_STRATEGY.md  development_guides_audit.md  doc_structure.txt  docusaurus.config.ts  ia_competitive_analysis.md  ia_documentation_audit.md  package-lock.json  package.json  sidebars.ts  sitemap-crawler.js  tsconfig.json
examples/: BranchingGraph.csv  BranchingGraphFailure.csv  BranchingGraphSuccess.csv  DocFlow.csv  LLMTest.csv  LinearGraph.csv  NewAgentScaffold.csv  README_suspend_messaging.md  README_three_template_messaging.md  SingleNodeGraph.csv  SubGraph.csv  column_alias_example.csv  enhanced_branching_agent_demo.py  enhanced_orchestrator_service.py  gm_orchestration.csv  gm_orchestration_2.csv  human_agent_examples.csv  lesson1.csv  parallel_map_reduce.csv  parallel_mixed_sequential.csv  parallel_simple_fan_out.csv  parallel_simple_test.csv  parallel_success_failure.csv  routing_examples.csv  suspend_agent_examples.csv  suspend_api_integration.csv  suspend_auto_resume.csv  suspend_graph_trigger.csv  suspend_messaging_basic.csv  suspend_node_external.csv  suspend_resume_http_test.py  suspend_resume_test.py  suspend_serverless_integration.csv  test.csv
planning/: OPENTELEMETRY_IMPLEMENTATION_PLAN.md
templates/: AgentMap_Workflow_Template.xlsx
tests/: PATH_MOCKING_EXAMPLES.py  TESTING_PATTERNS.md  conftest.py  migration_analysis.md  migration_conftest.py  pytest.ini  test_agent_instantiation.py  test_basic.py  test_branching.py  test_branching_agent.py  test_cli.py  test_config.py  test_config_path_override.py  test_csv_loading.py  test_csv_storage_agents.py  test_document_path_mixin.py  test_echo_agent.py  test_embedding_service_contract.py  test_end_to_end_workflow.py  test_error_handling.py  test_file_agent_integration.py  test_file_reader.py  test_file_writer.py  test_firebase_agent.py  test_graph_assembler.py  test_graphs.py  test_imports.py  test_input_agent.py  test_json_document_agents.py  test_llm_memory.py  test_llm_service.py  test_memory_tests.py  test_openai.py  test_orchestrator_agent.py  test_output_field_respecting.py  test_prompt_manager.py  test_prompt_manager_errors.py  test_registration.py  test_routing.py  test_scaffold_creates_files.py  (+10 more)
tests_old/: test_application_bootstrap_service.py  test_dependency_checker_cache.py.removed  test_graph_execution_service.py  test_graph_runner_service_bundle_flow.py  test_llm_service_enhanced.py.backup
tools/: excel_template_builder.py
(+1466 files in other folders)
