[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmap"
version = "0.2.0"
description = "AgentMap: Build and deploy LangGraph workflows from CSV files for fun and profit!"
authors = [
    {name = "John Welborn", email = "jwwelbor@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
license = {text = "MIT"}

dependencies = [
    "python-multipart>=0.0.9",
    "typer>=0.12.3",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.3",
    "pandas>=2.2.1",
    "dill>=0.3.6",
    "langgraph>=0.4.1",
    "langchain",
    "langchain-community>=0.3.23",
]

[project.optional-dependencies]
llm = [
    "langsmith",
    "openai>=1.12.0",
    "anthropic>=0.17.0",
    "google-generativeai>=0.3.2",
]
storage = [
    "firebase-admin>=6.8.0",
    "unstructured[md,pdf]>=0.10.0",
    "python-docx>=0.8.11",
]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]
all = [
    "langsmith",
    "openai>=1.12.0",
    "anthropic>=0.17.0",
    "google-generativeai>=0.3.2",
    "firebase-admin>=6.8.0",
    "unstructured[md,pdf]>=0.10.0",
    "python-docx>=0.8.11",
]

[project.urls]
Homepage = "https://jwwelbor.github.io/AgentMap"
BugTracker = "https://github.com/jwwelbor/AgentMap"
Source = "https://github.com/jwwelbor/AgentMap"
Tracker = "https://github.com/jwwelbor/AgentMap/issues"

[project.scripts]
agentmap = "agentmap.cli:app"
agentmap-server = "uvicorn.cli:main --app agentmap.fastapi_server:app --reload"

[tool.setuptools.package-data]
"agentmap.prompts.system" = ["**/*.yaml", "**/*.txt", "**/*.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"